--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -12,13 +12,20 @@
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.13.0",
+    "@types/passport": "^1.0.11",
+    "@types/passport-http-bearer": "^1.0.37",
+    "@types/passport-local": "^1.0.35",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.6.0",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "passport": "^0.6.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0"
