--- a/ressaite-web/package.json
+++ b/ressaite-web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.32",
+    "vite-plugin-ssr": "^0.4.87",
     "vue": "^3.2.47"
   },
   "devDependencies": {
