--- a/ressaite-web/package.json
+++ b/ressaite-web/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check build-only",
+    "// We need to define a `build` script, otherwise Vercel ignores the static files living at `dist/client/`": "",
+    "build": "echo 'I will never be called because the `vercel-build` script supersedes me'",
+    "// We need to run the entire build in `vercel-build` instead of `build` so that Vercel keeps the `dist/` directory in production (Vercel discards all files generated during the `build` script.)": "",
+    "vercel-build": "vite build",
     "preview": "vite preview",
-    "build-only": "vite build",
+    "build-only": "run-p type-check vite build",
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
