web: fix vercel deployment (#3)

--- a/ressaite-web/package.json
+++ b/ressaite-web/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "ressaite-web",
+  "name": "@al-un/ressaite-web",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "// We need to define a `build` script, otherwise Vercel ignores the static files living at `dist/client/`": "",
