--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -10,6 +10,7 @@
   "author": "Al-un",
   "license": "ISC",
   "devDependencies": {
+    "@al-un/ressaite-core": "*",
     "@types/express": "^4.17.15",
     "@types/node": "^18.13.0",
     "@types/passport": "^1.0.11",
