--- a/pouet/package.json
+++ b/pouet/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node ./index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:build": "tsc migrations/* models/* seeders/*"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +20,9 @@
   "devDependencies": {
     "@types/node": "^18.14.2",
     "@types/validator": "^13.7.12",
+    "nodemon": "^2.0.20",
     "sequelize-cli": "^6.6.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
