change npm run command location

--- a/.github/workflows/code_check.yaml
+++ b/.github/workflows/code_check.yaml
@@ -38,5 +38,4 @@ jobs:
       - name: Load Cache
         uses: ./.github/actions/setup-and-cache
 
-      - run: cd ressaite-web && ls -l
-      - run: npm run vercel-build
+      - run: cd ressaite-web && ls -l && npm run vercel-build
