lerna + api + web: make test and build scripts lerna-compatible

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@al-un/ressaite-root",
   "private": true,
+  "scripts": {
+    "build": "lerna run build",
+    "test": "lerna run test"
+  },
   "devDependencies": {
     "lerna": "^6.5.1",
     "typescript": "^4.9.5"
