--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"ressaite-api test is TODO\""
   },
   "author": "Al-un",
   "license": "ISC",
