--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -13,6 +13,7 @@
     "db:migrate": "sequelize-cli db:migrate"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "passport": "^0.6.0",
     "passport-http-bearer": "^1.0.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@al-un/ressaite-core": "*",
+    "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.4",
     "@types/express": "^4.17.15",
     "@types/mocha": "^10.0.1",
